# three.ws

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  .i18nrc.json  .lighthouserc.json  .mcp.json  .prettierignore  .sm-check.mjs  .smoke-juice.mjs  .vercelignore  .verify-arena.mjs  .vitest-out.tmp  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-TOKENS.md  Dockerfile  ISSUES.md  PRODUCTION_ISSUES.md  PROGRESS.md  README.md  STRUCTURE.md  THIRD_PARTY_NOTICES.md  _shot.mjs  _smoke3.mjs  avatar-page.html  compare-tmp.html  cross-page-check.mjs  deploy-check.mjs  dropdown-vis.mjs  dvis.mjs  eslint.config.js  glama.json  grid-tmp.html  home-mobile.mjs  inspect.mjs  (+41 more)
.agents/: README.md
.claude/: settings.json
.claude-plugin/: README.md  marketplace.json
.githooks/: pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
agent-payments-sdk/: FORK_NOTES.md  LICENSE  README.md  eslint.config.mjs  package.json  tsconfig.json  tsup.config.ts
agent-protocol-sdk/: README.md  package.json
agent-ui-sdk/: CHANGELOG.md  README.md  build.mjs  package.json
agents/: index.html
animation-sources/: Jumping Down.fbx  Looking Down.fbx  Standing Torch Light Torch From Wall.fbx  box turn.fbx  cow milking.fbx  holding turn left.fbx  kneeling idle.fbx  plant tree.fbx  wheelbarrow dump.fbx  wheelbarrow idle.fbx
api/: README.md  a-og.js  a-page.js  a2f.js  agent-actions.js  agent-ask.js  agent-collab.js  agent-delegate.js  agent-detail-og.js  agent-memory.js  agent-oembed.js  agent-og.js  agent-page.js  agent-reflect-digest.js  agent-screen-active.js  agent-screen-push.js  agent-screen-stream.js  agent-share.js  agent-skill-price.js  agent-skills.js  agent-strategy.js  agent-task.js  agent-vanity-grind.js  agent-wallet-bridge.js  agents.js  api-keys.js  app-og.js  ar.js  artifact.js  asr.js  audit-log.js  avatar-og.js  billboard.js  bounties.js  cdn-object.js  characters.js  chat-skills.js  chat.js  client-errors.js  config.js  (+101 more)
apps-sdk/: README.md
avatar-sdk/: README.md  package.json
blog/: 2500-new-animations.html  3d-ai-crypto-convergence.html  index.html  (+31 more)
contracts/agent-invocation/: .gitignore  Anchor.toml  Cargo.toml
contracts/agent-invocation/src/: lib.rs
contracts/skill-license/: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  README.md
contracts/skill-license/src/: lib.rs
crates/vanity-grinder/: Cargo.toml
crates/vanity-grinder/src/: lib.rs
(+9536 files in other folders)
