# Self-contained workspace so `cargo build-sbf` / `anchor build` here never walks
# up into an unrelated parent workspace.
[workspace]

[package]
name = "agent-invocation"
version = "0.2.0"
description = "Verifiable agent-to-agent skill invocation on Solana."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nirholas/three.ws"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_invocation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
