# Self-contained workspace so `cargo build-sbf` / `anchor build` here never walks
# up into an unrelated parent workspace.
[workspace]

[package]
name = "skill-license"
version = "0.1.0"
description = "On-chain skill-ownership licenses (1/1 NFT access keys) on Solana."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nirholas/three.ws"

[lib]
crate-type = ["cdylib", "lib"]
name = "skill_license"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
